--- a/app/src/main/res/layout/missed_attendance_list_item.xml
+++ b/app/src/main/res/layout/missed_attendance_list_item.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        tools:text="Ekisde"
+        tools:text="Student"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,7 @@
         android:id="@+id/image_just"
         android:layout_width="66dp"
         android:layout_height="66dp"
-        android:src="@drawable/ic_launcher_foreground"
+        android:src="@drawable/ic_justificada"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/date"
         app:layout_constraintEnd_toEndOf="parent"
